[Fix] Scroll in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,5 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  background-color: #121212; /* Fondo oscuro */
-  color: #ffffff; /* Texto en blanco */
+:root.dark {
+  scrollbar-color: #3a3a3a #1e1e1e;
 }
 
 .texto-verde {
